@@ -4,6 +4,7 @@ ChangeLog for RQL
 --
     * #78681: don't crash on column aliases used in outer join
     * #81394: HAVING support in write queries (INSERT,SET,DELETE)
+    * #80799: fix wrong type analysis with 'NOT identity'
     * when possible, use entity type as translation context of relation
       (break cw < 3.13.10 compat)
 
